--- a/src/main/resources/templates/bookingAdd.html
+++ b/src/main/resources/templates/bookingAdd.html
@@ -16,7 +16,7 @@
 
                 <div class="my-3">
                     <label for="bookingName">Bookings Surname:</label>
-                    <input class="textfield form-control" type="text" id="bookingName" name="name" required>
+                    <input class="textfield form-control" type="text" id="bookingName" name="name"  pattern="[A-Za-z0-9 ]+" required>
                 </div>
 
                 <div class="my-3">
