--- a/src/main/resources/templates/recipesAdd.html
+++ b/src/main/resources/templates/recipesAdd.html
@@ -17,7 +17,7 @@
                     <h6><div th:if="${message}" th:text="${message}" style="color:green; text-align: center;"></div></h6>
                     <div class="showform">
                     <form action="#" th:action="@{/recipes/addRecipe}" th:object="${recipe}" method="post">
-                        <p>Name: <input type="text" th:field="*{name}" required/></p>
+                        <p>Name: <input type="text" th:field="*{name}" required pattern="[A-Za-z0-9 ]+"/></p>
                         <p>Meal Price: <input type="number" min="0.01" step="0.01" th:field="*{price}" required/></p>
 
                         <div class="longlist">
